# MonthFlow

./: CMakeLists.txt  res.qrc
src/: CentralWidget.cpp  CentralWidget.h  ControlWidget.cpp  ControlWidget.h  DeadlineStatus.h  ExpanderWidget.cpp  ExpanderWidget.h  MainWindow.cpp  MainWindow.h  NewTaskDialog.cpp  NewTaskDialog.h  StackedPages.h  Styles.h  TaskData.h  TaskWidget.cpp  TaskWidget.h  main.cpp
src/gui/: MainWindow.cpp  MainWindow.h  NewTaskDialog.cpp  NewTaskDialog.h  ProfileDialog.cpp  ProfileDialog.h  TaskWidget.cpp  TaskWidget.h  TasksViewer.cpp  TasksViewer.h
ui/: CentralWidget.ui  ControlWidget.ui  NewTaskDialog.ui  ProfileDialog.ui  TasksViewer.ui
